--- a/backend/majors/ANT.yaml
+++ b/backend/majors/ANT.yaml
@@ -81,7 +81,7 @@ req_list:
     max_counted: 1
     min_needed: ALL
     explanation: |-
-      The Medical Anthropology Track (MedAnth) is for students interested in all aspects of medicine, from biosocial to therapeutic systems to cultural ideas about illness and practices of health and well-being. Choosing this track allows students who are interested in the sciences, policy, the humanities, and the subfield of medical anthropology to focus their undergraduate training around these topics.
+      The Medical Anthropology Track (MedAnth) is for students interested in all aspects of medicine, from biosocial to therapeutic systems to cultural ideas about illness and practices of health and well-being. Choosing this track allows students who are interested in the sciences, policy, the humanities, and the subfield of medical anthropology to focus their undergraduate training around these topics.<br>
       The MedAnth track requires nine courses total; four are required and the other five are electives selected from category groups explained below. Students in this track are allowed to substitute up to two of the five elective courses with a class taught within the Department of Anthropology but outside MedAnth. Students are also allowed to satisfy departmental courses using two cognates.
     req_list:
     - name: Core
@@ -153,7 +153,7 @@ req_list:
     max_counted: 1
     min_needed: ALL
     explanation: |-
-      The Law, Politics, and Economics Track (LPE) is for students interested in these three well-established fields within the discipline of anthropology. LPE students are introduced to key theories of value, exchange and justice, for example, and to the comparative studies of law, politics, development, globalization and microeconomics across societies.
+      The Law, Politics, and Economics Track (LPE) is for students interested in these three well-established fields within the discipline of anthropology. LPE students are introduced to key theories of value, exchange and justice, for example, and to the comparative studies of law, politics, development, globalization and microeconomics across societies.<br>
       The LPE track requires nine courses total; three are required and the other six include departmental electives focused on the law, economics and politics (see examples from list below). Students in this track are allowed to substitute up to two of the six elective courses with a class taught within the Department of Anthropology but outside the LPE track. Students are also allowed to take two cognates.
     req_list:
     - name: Required Courses
@@ -193,19 +193,19 @@ req_list:
   max_counted: 1
   min_needed: 1
   explanation: |-
-    <p><i>Editor's Note: Majors do not enroll in any numbered course for this requirement, so Compass does not check it.</i></p>
+    <i>Editor's Note: Majors do not enroll in any numbered course for this requirement, so Compass does not check it.</i><br><br>
     
-    <p>Independent work in the junior year involves an original paper focused on an anthropological theme or debate of interest to the student. The paper is mostly based on library research and literature review and should reflect the student's growing mastery of anthropological ways of knowing and the uniqueness of ethnographic evidence-making and theorizing.  New field research is not appropriate for this exercise. In the fall, students develop a detailed problem statement and annotated bibliography on a relevant subject and present a research proposal for approval by the department. In the spring, students write a paper (about 8,000 words, excluding references) based on the research initiated in the fall, in consultation with their adviser. Advising begins in assigned groups during early fall before transitioning to individual advising with continuing group work. Opportunities for peer group support and writing workshops are offered throughout junior year independent work.
-    Since the junior paper topic is chosen before the final track declaration deadline, junior papers, unlike senior theses, do not have to be related to a student's chosen track.</p>
+    Independent work in the junior year involves an original paper focused on an anthropological theme or debate of interest to the student. The paper is mostly based on library research and literature review and should reflect the student's growing mastery of anthropological ways of knowing and the uniqueness of ethnographic evidence-making and theorizing.  New field research is not appropriate for this exercise. In the fall, students develop a detailed problem statement and annotated bibliography on a relevant subject and present a research proposal for approval by the department. In the spring, students write a paper (about 8,000 words, excluding references) based on the research initiated in the fall, in consultation with their adviser. Advising begins in assigned groups during early fall before transitioning to individual advising with continuing group work. Opportunities for peer group support and writing workshops are offered throughout junior year independent work.<br>
+    Since the junior paper topic is chosen before the final track declaration deadline, junior papers, unlike senior theses, do not have to be related to a student's chosen track.
   no_req:
 - name: Senior Thesis
   max_counted: 1
   min_needed: 1
   explanation: |-
-    <p><i>Editor's Note: Majors do not enroll in any numbered course for this requirement, so Compass does not check it.</i></p>
+    <i>Editor's Note: Majors do not enroll in any numbered course for this requirement, so Compass does not check it.</i><br><br>
     
-    <p>Independent work in the senior year consists of a thesis based on ethnographic research on a timely issue or deep analysis of the extant anthropological literature on a topic of interest. A thesis that has a central artistic component must be accompanied by a substantial written essay. Doing ethnographic or community-engaged thesis research during the summer between junior and senior years is very helpful, but not required. Students carrying out fieldwork must have IRB approval. The anthropology department encourages methodologically and theoretically innovative senior thesis projects that expand our understanding of diverse lifeworlds and reorient our ethical and political imagination.
+    Independent work in the senior year consists of a thesis based on ethnographic research on a timely issue or deep analysis of the extant anthropological literature on a topic of interest. A thesis that has a central artistic component must be accompanied by a substantial written essay. Doing ethnographic or community-engaged thesis research during the summer between junior and senior years is very helpful, but not required. Students carrying out fieldwork must have IRB approval. The anthropology department encourages methodologically and theoretically innovative senior thesis projects that expand our understanding of diverse lifeworlds and reorient our ethical and political imagination.
     Anthropology seniors are each assigned a thesis adviser early in the fall term. A senior workshop that meets periodically during the second half of the fall term is designed to help students develop their senior theses; all seniors are expected to participate.
     Students are encouraged to utilize the VizE Lab for Ethnographic Data Visualization to receive assistance in creating multimodal senior theses that combine field-based ethnographic storytelling, visual documentary and online interactive data visualizations.
-    Anthropology theses are usually multipart or multichapter projects, ranging from 20,000 to 25,000 words.</p>
+    Anthropology theses are usually multipart or multichapter projects, ranging from 20,000 to 25,000 words.
   no_req:
