--- a/backend/majors/CEE.yaml
+++ b/backend/majors/CEE.yaml
@@ -104,8 +104,8 @@ req_list:
       explanation:
       req_list:
       - name:
-        max_counted: 1
-        min_needed: 3
+        max_counted: 3
+        min_needed: 1
         explanation:
         course_list:
         - ARC 203
@@ -114,6 +114,10 @@ req_list:
       - name:
         max_counted: 1
         min_needed: 1
+        excluded_course_list:
+        - ARC 203
+        - ARC 204
+        - ARC 205
         course_list:
         - ARC *
     - name: Engineering Design
@@ -193,23 +197,20 @@ req_list:
       - name:
         max_counted: 1
         min_needed: 1
-        explanation:
         course_list:
         - CEE 207
         - CEE 344
       - name:
         max_counted: 1
         min_needed: 1
-        explanation:
         course_list:
         - CEE 364
         - CEE 365
       - name:
         max_counted: 1
         min_needed: 5
-        explanation:
         course_list:
-        - CEE 302
+        - ENV 302 / CEE 302 / EEB 302
         - CEE 305
         - CEE 306
         - CEE 308
@@ -217,14 +218,12 @@ req_list:
     - name: Engineering Design
       max_counted: 1
       min_needed: 2
-      explanation:
       course_list:
       - CEE 471
       - CEE 477
     - name: Independent Work
       max_counted: 1
       min_needed: 1
-      explanation:
       course_list:
       - CEE 478
     - name: Program Elective
@@ -238,7 +237,6 @@ req_list:
       - name:
         max_counted: 1
         min_needed: 2
-        explanation:
         course_list:
         - CEE 334
         - CEE 361
@@ -252,7 +250,6 @@ req_list:
       - name:
         max_counted: 1
         min_needed: 1
-        explanation:
         course_list:
         - GEO 363
         - GEO 418
@@ -462,7 +459,7 @@ req_list:
         max_counted: 1
         min_needed: 1
         explanation:
-        course-list:
+        course_list:
         - CEE 461
     - name: Independent Work
       max_counted: 1
@@ -498,7 +495,7 @@ req_list:
       in this track should integrate engineering courses in a coherent
       manner with the topic of interest to the student. The track is 
       designed to be rigorous, yet allow for a wide degree of 
-      flexibility in the course of studies.
+      flexibility in the course of studies. <br><br>
 
       All students in engineering and the liberal arts are required to 
       take a minimum of six courses in engineering sciences that stress 
@@ -544,8 +541,6 @@ req_list:
         science requirements and electives should form a coherent 
         program of study, which needs to be approved by the adviser. 
         At least eight of these courses must be the 300 level or above.
-        <Editor's Note> This section is copied directly from the 
-        Undergraduate Announcement.
       req_list:
       - name:
         max_counted: 7
