--- a/backend/majors/EAS.yaml
+++ b/backend/majors/EAS.yaml
@@ -87,9 +87,9 @@ req_list:
     max_counted: 1
     min_needed: 1
     explanation: |-
-      <i>Editor's Note: The course list for this requirement is too broad. Please check with your advisor.</i>
+      <i>Editor's Note: The course list for this requirement is too broad. Please check with your advisor.</i><br><br>
       
-      At least one course on premodern East Asia. 
+      At least one course on premodern East Asia.<br> 
       Either HIS 207 or HUM 233, when taken in fulfillment of a transnational course (2), may also be used simultaneously toward the premodern requirement (3), however, the course will only count toward one of the six required EAS-prefix departmentals.
     course_list:
     - HIS 207 / EAS 207 / MED 207
@@ -99,10 +99,10 @@ req_list:
     max_counted: 1
     min_needed: 2
     explanation: |-
-      Two additional courses, which may be:
-      EAS courses, including courses cross-listed with EAS.
-      Cognate courses approved by the director of undergraduate studies
-      Language courses at or above the 300 level (after the three-year proficiency requirement is fulfilled).
+      Two additional courses, which may be:<br>
+      EAS courses, including courses cross-listed with EAS.<br> 
+      Cognate courses approved by the director of undergraduate studies<br> 
+      Language courses at or above the 300 level (after the three-year proficiency requirement is fulfilled).<br> 
       Any courses in a second East Asian language.
     course_list:
     - EAS ***
@@ -114,7 +114,7 @@ req_list:
   max_counted: 1
   min_needed: 1
   explanation: |-
-    <i>Editor's Note: Majors do not enroll in any numbered course for this requirement, so Compass does not check it.</i>
+    <i>Editor's Note: Majors do not enroll in any numbered course for this requirement, so Compass does not check it.</i><br><br> 
     
     In the fall term the student participates in the departmental junior seminar (EAS 300) and also writes a junior independent work. In the spring, the student writes a second junior independent work under the supervision of an appropriate faculty member. At the end of junior year, the student begins to draft a proposal for the senior thesis.
   no_req:
@@ -122,16 +122,16 @@ req_list:
   max_counted: 1
   min_needed: 1
   explanation: |-
-    <i>Editor's Note: Majors do not enroll in any numbered course for this requirement, so Compass does not check it.</i>
+    <i>Editor's Note: Majors do not enroll in any numbered course for this requirement, so Compass does not check it.</i><br><br>
     
-    Each student prepares a senior thesis in consultation with an appropriate member of the faculty. The senior thesis represents the culmination of the undergraduate curriculum. It should be an original contribution to scholarship on East Asia, based at least in part on source materials in the student's language of specialization.
+    Each student prepares a senior thesis in consultation with an appropriate member of the faculty. The senior thesis represents the culmination of the undergraduate curriculum. It should be an original contribution to scholarship on East Asia, based at least in part on source materials in the student's language of specialization.<br>
     Scholarship aid is available for senior thesis research abroad. Students should review funding opportunities listed in the Student Activities Funding Engine (SAFE), and may also want to consult the websites of the Program in East Asian Studies (EAP) and the Office of the Dean of the College (ODOC) for further information.
   no_req:
 - name: Senior Departmental Examination
   min_needed: 1
   max_counted: 1
   explanation: |-
-    <i>Editor's Note: Majors do not enroll in any numbered course for this requirement, so Compass does not check it.</i>
+    <i>Editor's Note: Majors do not enroll in any numbered course for this requirement, so Compass does not check it.</i><br><br>
     
     At the end of the spring term, the student appears before a faculty committee for an oral defense of the thesis. The defense will take the form of a conversation between the student and a faculty committee, and it will center on the senior independent work, as well as larger questions in the field of East Asian studies that inform it. Students will be asked to reflect on the process of their research: the original source of interest in their research topic; the process of fleshing out the architecture of their project; and difficulties and creative discoveries of their research and writing. The conversation will begin in the students' primary research language: Korean, Japanese or Chinese.
   no_req:
