--- a/backend/majors/FIT.yaml
+++ b/backend/majors/FIT.yaml
@@ -106,7 +106,7 @@ req_list:
         max_counted: 1
         min_needed: 3
         explanation: |-
-          <i>Editor's Note: This does not represent a comprehensive list of courses that fulfill this requirement. Ask the department for approved cognate courses.</i>
+          <i>Editor's Note: This does not represent a comprehensive list of courses that fulfill this requirement. Ask the department for approved cognate courses.</i><br><br>
 
           Students major in French or Italian. Eight upper-division courses are counted toward the major. At least five of these must be in the language and subject of the major. Up to two of the five departmental courses may be taken at the 200 level (but FRE 207 and 208, or ITA 207 and 208, cannot both be counted). Up to three of the eight may be cognate courses approved by the director of undergraduate studies (DUS) and drawn from other sections of the department or from other humanities and social science subjects.
         course_list:
@@ -117,7 +117,7 @@ req_list:
         max_counted: 1
         min_needed: 3
         explanation: |-
-          <i>Editor's Note: This does not represent a comprehensive list of courses that fulfill this requirement.</i>
+          <i>Editor's Note: This does not represent a comprehensive list of courses that fulfill this requirement.</i><br><br>
 
           Students intending to combine work in French or Italian with another language, civilization, and culture normally take a minimum of eight upper-division courses: five in French or Italian (one of which may be a cognate), three in the other relevant language. Up to two of the five departmental courses may be taken at the 200-level (but FRE 207 and 208, or ITA 207 and 208, cannot both be counted).
         course_list:
@@ -133,7 +133,7 @@ req_list:
         max_counted: 1
         min_needed: 3
         explanation: |-
-          <i>Editor's Note: This does not represent a comprehensive list of courses that fulfill this requirement. Ask the department for approved courses in the other field.</i>
+          <i>Editor's Note: This does not represent a comprehensive list of courses that fulfill this requirement. Ask the department for approved courses in the other field.</i><br><br>
 
           Students intending to combine work in French or Italian and another related field normally take a minimum of eight upper-division courses: five in the relevant language and literature (one of which may be a cognate), and three in the other field. For example, students specializing in French or Italian and History, Politics, or Art and Archaeology, might take appropriate courses in those departments, such as HIS 350, 351, 345, or 365, POL 371, 372, or 381, or ART 319, 320, or 333. Up to two of the five departmental courses may be taken at the 200-level (but FRE 207 and 208, or ITA 207 and 208, cannot both be counted).
         course_list:
@@ -249,7 +249,7 @@ req_list:
         max_counted: 1
         min_needed: 3
         explanation: |-
-          <i>Editor's Note: This does not represent a comprehensive list of courses that fulfill this requirement. Ask the department for approved cognate courses.</i>
+          <i>Editor's Note: This does not represent a comprehensive list of courses that fulfill this requirement. Ask the department for approved cognate courses.</i><br><br>
 
           Students major in French or Italian. Eight upper-division courses are counted toward the major. At least five of these must be in the language and subject of the major. Up to two of the five departmental courses may be taken at the 200 level (but FRE 207 and 208, or ITA 207 and 208, cannot both be counted). Up to three of the eight may be cognate courses approved by the director of undergraduate studies (DUS) and drawn from other sections of the department or from other humanities and social science subjects.
         course_list:
@@ -260,7 +260,7 @@ req_list:
         max_counted: 1
         min_needed: 3
         explanation: |-
-          <i>Editor's Note: This does not represent a comprehensive list of courses that fulfill this requirement.</i>
+          <i>Editor's Note: This does not represent a comprehensive list of courses that fulfill this requirement.</i><br><br>
 
           Students intending to combine work in French or Italian with another language, civilization, and culture normally take a minimum of eight upper-division courses: five in French or Italian (one of which may be a cognate), three in the other relevant language. Up to two of the five departmental courses may be taken at the 200-level (but FRE 207 and 208, or ITA 207 and 208, cannot both be counted).
         course_list:
@@ -276,7 +276,7 @@ req_list:
         max_counted: 1
         min_needed: 3
         explanation: |-
-          <i>Editor's Note: This does not represent a comprehensive list of courses that fulfill this requirement. Ask the department for approved courses in the other field.</i>
+          <i>Editor's Note: This does not represent a comprehensive list of courses that fulfill this requirement. Ask the department for approved courses in the other field.</i><br><br>
 
           Students intending to combine work in French or Italian and another related field normally take a minimum of eight upper-division courses: five in the relevant language and literature (one of which may be a cognate), and three in the other field. For example, students specializing in French or Italian and History, Politics, or Art and Archaeology, might take appropriate courses in those departments, such as HIS 350, 351, 345, or 365, POL 371, 372, or 381, or ART 319, 320, or 333. Up to two of the five departmental courses may be taken at the 200-level (but FRE 207 and 208, or ITA 207 and 208, cannot both be counted).
         course_list:
@@ -326,23 +326,23 @@ req_list:
   max_counted: 1
   min_needed: 1
   explanation: |-
-    <i>Editor's Note: Majors do not enroll in any numbered course for this requirement, so Compass does not check it.</i>
+    <i>Editor's Note: Majors do not enroll in any numbered course for this requirement, so Compass does not check it.</i><br><br>
 
-    At the time of entering the department, and in all cases no later than spring of the sophomore year, students should discuss their likely area of interest with the departmental representative in order to make the attribution of junior advisers as appropriate as possible. The adviser will be assigned at the beginning of junior year. Students should get in touch with their Junior Adviser and plan regular meetings. In consultation with their adviser, students will also choose the language in which they will draft their paper. Responsibility for making and keeping these arrangements falls on the student.
+    At the time of entering the department, and in all cases no later than spring of the sophomore year, students should discuss their likely area of interest with the departmental representative in order to make the attribution of junior advisers as appropriate as possible. The adviser will be assigned at the beginning of junior year. Students should get in touch with their Junior Adviser and plan regular meetings. In consultation with their adviser, students will also choose the language in which they will draft their paper. Responsibility for making and keeping these arrangements falls on the student.<br><br>
 
-    The first junior paper, written in the fall semester, should be about 4,000 words. The second junior paper, written in the spring semester, should be between 5,000 and 8,000 words. Both junior papers may be written in English, in which case a three-page summary in the relevant language must be provided. If the paper is written in the relevant language, a three-page summary in English is required.
+    The first junior paper, written in the fall semester, should be about 4,000 words. The second junior paper, written in the spring semester, should be between 5,000 and 8,000 words. Both junior papers may be written in English, in which case a three-page summary in the relevant language must be provided. If the paper is written in the relevant language, a three-page summary in English is required.<br><br>
 
-    Students following tracks 2, 3 or 4 may write one junior paper in one of their two subjects of concentration, and one in the other.
+    Students following tracks 2, 3 or 4 may write one junior paper in one of their two subjects of concentration, and one in the other.<br><br>
 
     In preparing their papers students should conform to the principles specified in the University's instructions for the writing of essays. Presentation should follow either the Modern Language Association Handbook or The Chicago Manual of Style, with consistency.
 - name: Senior Thesis
   max_counted: 1
   min_needed: 1
   explanation: |-
-    <i>Editor's Note: Majors do not enroll in any numbered course for this requirement, so Compass does not check it.</i>
+    <i>Editor's Note: Majors do not enroll in any numbered course for this requirement, so Compass does not check it.</i><br><br>
 
-    As the culmination of their independent work, senior students write a thesis on an approved topic. Late in their junior year, students will discuss possible areas of interest with the departmental representative. Topics chosen in the past have ranged across the field of French and Italian studies, from linguistic problems and literary techniques to close textual analysis to thematic and ideological study. Students primarily interested in culture and civilization have written on art, on political and economic issues, on education, and on a variety of social questions. For students following tracks 2, 3, and 4, joint supervision may be arranged. The senior thesis is a major commitment of a student's time and energy, and the most important yardstick for choosing a topic is willingness to spend many hours immersed in that particular set of texts or problems.
+    As the culmination of their independent work, senior students write a thesis on an approved topic. Late in their junior year, students will discuss possible areas of interest with the departmental representative. Topics chosen in the past have ranged across the field of French and Italian studies, from linguistic problems and literary techniques to close textual analysis to thematic and ideological study. Students primarily interested in culture and civilization have written on art, on political and economic issues, on education, and on a variety of social questions. For students following tracks 2, 3, and 4, joint supervision may be arranged. The senior thesis is a major commitment of a student's time and energy, and the most important yardstick for choosing a topic is willingness to spend many hours immersed in that particular set of texts or problems.<br><br>
 
-    Concentrators in French and/or Italian who are also earning certificates should consult with their advisers about selecting a suitable thesis topic. The senior thesis may be written in English, in which case a three-page summary in the relevant language must be provided. If the thesis is written in the relevant language, a three-page summary in English is required.
+    Concentrators in French and/or Italian who are also earning certificates should consult with their advisers about selecting a suitable thesis topic. The senior thesis may be written in English, in which case a three-page summary in the relevant language must be provided. If the thesis is written in the relevant language, a three-page summary in English is required.<br><br>
 
     Senior theses should not be more than 20,000 words, nor should they fall below 15,000 words.
