--- a/backend/majors/MAT.yaml
+++ b/backend/majors/MAT.yaml
@@ -100,19 +100,19 @@ req_list:
   max_counted: 1
   min_needed: 1
   explanation: |-
-    <p><i>Editor's Note: Majors do not enroll in any numbered course for this requirement, so Compass does not check it.</i></p>
+    <i>Editor's Note: Majors do not enroll in any numbered course for this requirement, so Compass does not check it.</i><br><br>
 
-    <p>The junior year independent work generally consists of participating actively in a junior seminar in both the fall and spring semesters. Alternatively, a student may opt to replace one junior seminar with supervised reading in a special subject and then writing a paper based on that reading.</p>
+    The junior year independent work generally consists of participating actively in a junior seminar in both the fall and spring semesters. Alternatively, a student may opt to replace one junior seminar with supervised reading in a special subject and then writing a paper based on that reading.
 - name: Senior Thesis
   max_counted: 1
   min_needed: 1
   explanation: |-
-    <p><i>Editor's Note: Majors do not enroll in any numbered course for this requirement, so Compass does not check it.</i></p>
+    <i>Editor's Note: Majors do not enroll in any numbered course for this requirement, so Compass does not check it.</i><br><br>
 
-    <p>Senior theses are expected and tend to be more in-depth, more original in exposition/content, and more substantial than junior papers. However, there are no formal length requirements. Some of the best senior theses in mathematics over the years have been under 10 pages, while others have been over 100 pages, although about 20-40 pages when single-spaced seems typical. Senior theses are evaluated on the same basic criteria as junior papers, but naturally more originality and imagination in the exposition and content are expected in senior theses.
+    Senior theses are expected and tend to be more in-depth, more original in exposition/content, and more substantial than junior papers. However, there are no formal length requirements. Some of the best senior theses in mathematics over the years have been under 10 pages, while others have been over 100 pages, although about 20-40 pages when single-spaced seems typical. Senior theses are evaluated on the same basic criteria as junior papers, but naturally more originality and imagination in the exposition and content are expected in senior theses.<br><br>
 
-    The senior thesis is due by the university set deadline (usually, the start of the spring reading period). The thesis is evaluated by both the adviser and a second reader; thus, a second reader should be arranged at least a couple of weeks before the due date of the senior thesis (ideally much sooner). The thesis is "defended" to both the adviser and the second reader during a thesis defense that occurs a couple of days after Dean's date, during the final examination period. The defense consists of a short (about 25 minute) presentation by the student, followed by questions from the readers pertaining to the content of the thesis. Two grades are given: one for the quality of the presentation and defense (to emphasize the importance of mathematical communication), and one for the thesis itself.
+    The senior thesis is due by the university set deadline (usually, the start of the spring reading period). The thesis is evaluated by both the adviser and a second reader; thus, a second reader should be arranged at least a couple of weeks before the due date of the senior thesis (ideally much sooner). The thesis is "defended" to both the adviser and the second reader during a thesis defense that occurs a couple of days after Dean's date, during the final examination period. The defense consists of a short (about 25 minute) presentation by the student, followed by questions from the readers pertaining to the content of the thesis. Two grades are given: one for the quality of the presentation and defense (to emphasize the importance of mathematical communication), and one for the thesis itself.<br><br>
 
-    The primary adviser for the senior thesis can be a university faculty member outside the mathematics department (which is allowed, supported, and indeed occurs frequently). In this case, the second reader must be arranged within the mathematics department. (This is to help ensure uniformity in the evaluation process.)
+    The primary adviser for the senior thesis can be a university faculty member outside the mathematics department (which is allowed, supported, and indeed occurs frequently). In this case, the second reader must be arranged within the mathematics department. (This is to help ensure uniformity in the evaluation process.)<br><br>
 
-    Senior thesis grades, together with grades in mathematics courses, are also taken into account when determining departmental honors.</p>
+    Senior thesis grades, together with grades in mathematics courses, are also taken into account when determining departmental honors.
