--- a/backend/majors/NES.yaml
+++ b/backend/majors/NES.yaml
@@ -127,12 +127,12 @@ req_list:
       max_counted: 1
       min_needed: 2
       explanation: |-
-        Students must take two regionally specific courses, with each of the two courses focusing on a different one of the following six subregions of the Near East:
-        Egypt, North Africa, and Andalusia
-        The Levant, Iraq, and the Arabian Peninsula
-        Ottoman Empire/Turkey
-        Iran
-        Muslim South and Central Asia
+        Students must take two regionally specific courses, with each of the two courses focusing on a different one of the following six subregions of the Near East:<br>
+        Egypt, North Africa, and Andalusia<br>
+        The Levant, Iraq, and the Arabian Peninsula<br>
+        Ottoman Empire/Turkey<br>
+        Iran<br>
+        Muslim South and Central Asia<br>
         Diasporic communities
       req_list:
       - name: Egypt, North Africa, and Andalusia
@@ -202,10 +202,10 @@ req_list:
       max_counted: 1
       min_needed: 2
       explanation: |-
-        Students must take at least one course in two of the following four disciplines:
-        History
-        Literature
-        Social sciences
+        Students must take at least one course in two of the following four disciplines:<br>
+        History<br>
+        Literature<br>
+        Social sciences<br>
         Religion
       req_list:
       - name: History
@@ -302,16 +302,16 @@ req_list:
   max_counted: 1
   min_needed: 1
   explanation: |-
-    <i>Editor's Note: Majors do not enroll in any numbered course for this requirement, so Compass does not check it.</i>
+    <i>Editor's Note: Majors do not enroll in any numbered course for this requirement, so Compass does not check it.</i><br><br>
     
-    NES majors write one Junior Paper (JP) in the spring semester of their junior year. An NES JP is normally an essay of 20 to 30 double-spaced pages focusing on a topic related to the Near East. The JP most often addresses aspects of the history, societies, religions, politics and/or cultures of the Near East, but students have tackled subjects in fields as diverse as medical anthropology and the economics of the energy industry. The department does not require students to use sources in a Near Eastern language, but does strongly encourage students who are sufficiently proficient to do so.
+    NES majors write one Junior Paper (JP) in the spring semester of their junior year. An NES JP is normally an essay of 20 to 30 double-spaced pages focusing on a topic related to the Near East. The JP most often addresses aspects of the history, societies, religions, politics and/or cultures of the Near East, but students have tackled subjects in fields as diverse as medical anthropology and the economics of the energy industry. The department does not require students to use sources in a Near Eastern language, but does strongly encourage students who are sufficiently proficient to do so.<br>
     The Junior Paper should offer critical analysis of a specific subject or problem, not merely a passive review of the existing literature or a summary of facts. Advice on completing a work of independent research in NES, targeted towards the senior thesis, and is worth consulting early and often while writing the JP as well.
   no_req:
 - name: Senior Thesis
   max_counted: 1
   min_needed: 1
   explanation: |-
-    <i>Editor's Note: Majors do not enroll in any numbered course for this requirement, so Compass does not check it.</i>
+    <i>Editor's Note: Majors do not enroll in any numbered course for this requirement, so Compass does not check it.</i><br><br>
     
     The senior thesis is the capstone of a student's training in NES. It is typically a focused essay of 70 to 100 double-spaced pages (or around 25,000 words of text excluding footnotes) that presents original research on a topic related to the history, societies, religions, politics and/or cultures of the Near East. As with the JP, the department does not require students to use sources in a Near Eastern language but does strongly encourage students who are sufficiently proficient to do so.
   no_req:
