--- a/backend/majors/ORF.yaml
+++ b/backend/majors/ORF.yaml
@@ -28,11 +28,9 @@ description: |-
   Requirements for study in the department follow the general
   requirements for the School of Engineering and Applied Science
   and the University.
-
 urls:
   - https://ua.princeton.edu/academic-units/department-operations-research-and-financial-engineering
   - https://orfe.princeton.edu/documents/undergraduate-academic-guides
-
 contacts:
   - type: Chair
     name: Ronnie Sircar
@@ -58,7 +56,6 @@ req_list:
   - ORF 307
   - ORF 309
   - ORF 335
-
 - name: Departmental Electives
   max_counted: 1
   min_needed: 10
@@ -68,12 +65,11 @@ req_list:
     investigation of core methodologies, applying these skills in specific
     areas of application, or learning about closely related technologies.
     Students must choose ten courses from the following list, with the
-    following constraints:
+    following constraints:<br><br>
 
-    1. There must be at least four courses from ORFE.
+    1. There must be at least four courses from ORFE.<br>
     2. There can be no more than three courses from any one department
     (excluding ORFE).
-
   pdfs_allowed: false
   completed_by_semester: 8
   req_list:
@@ -82,271 +78,145 @@ req_list:
       min_needed: 1
       explanation: There must be at least four courses from ORFE.
       course_list:
-        - ORF 311
-        - ORF 350
-        - ORF 360
-        - ORF 363
-        - ORF 375
-        - ORF 376
-        - ORF 387
-        - ORF 401
-        - ORF 405
-        - ORF 407
-        - ORF 409
-        - ORF 418
-        - ORF 435
-        - ORF 445
-        - ORF 455
-        - ORF 467
-        - ORF 473
-        - ORF 474
-
+      - ORF 311
+      - ORF 350
+      - ORF 360
+      - ORF 363
+      - ORF 375
+      - ORF 376
+      - ORF 387
+      - ORF 401
+      - ORF 405
+      - ORF 407
+      - ORF 409
+      - ORF 418
+      - ORF 435
+      - ORF 445
+      - ORF 455
+      - ORF 467
+      - ORF 473
+      - ORF 474
     - name: Other Departments
-      max_counted: 3
-      min_needed:
+      max_counted: 6
+      min_needed: 1
       explanation: |-
-        There can be no more than three courses from any one department (excluding ORFE).
+        There can be no more than three courses from any one department (excluding ORFE).<br><br>
 
-        Note: MAT 391/MAE 305 and MAT 427 cannot both be taken because the content is too similar.
-      pdfs_allowed: false
-      completed_by_semester: 8
+        MAT 391/MAE 305 and MAT 427 cannot both be taken because the content is too similar.
       req_list:
-        - name: Civil and Environmental Engineering
-          max_counted:
-          min_needed:
-          explanation:
-          course_list:
-            - CEE 304
-            - CEE 460
-
-        - name: Chemistry
-          max_counted:
-          min_needed:
-          explanation:
-          course_list:
-            - CHM 301
-            - CHM 302
-
-        - name: Computer Science
-          max_counted:
-          min_needed:
-          explanation:
-          course_list:
-            - COS 217
-            - COS 226
-            - COS 323
-            - COS 423
-            - COS 485
-
-        - name: Economics
-          max_counted:
-          min_needed:
-          explanation:
-          course_list:
-            - ECO 310
-            - ECO 311
-            - ECO 312
-            - ECO 317
-            - ECO 332
-            - ECO 341
-            - ECO 342
-            - ECO 361
-            - ECO 362
-            - ECO 363
-            - ECO 418
-            - ECO 462
-            - ECO 464
-            - ECO 466
-            - ECO 467
-
-        - name: Ecology and Evolutionary Biology
-          max_counted:
-          min_needed:
-          explanation:
-          course_list:
-            - EEB 324
-
-        - name: Electrical and Computer Engineering
-          max_counted:
-          min_needed:
-          explanation:
-          course_list:
-            - ECE 301
-            - ECE 381
-            - ECE 473
-            - ECE 486
-
-        - name: Environmental Studies
-          max_counted:
-          min_needed:
-          explanation:
-          course_list:
-            - ENV 302
-
-        - name: Mechanical and Aerospace Engineering
-          max_counted:
-          min_needed:
-          explanation:
-          course_list:
-            - MAE 206
-            - MAE 345
-            - MAE 433
-            - MAE 434
-
-        - name: Mathematics
-          max_counted: 3
-          min_needed:
-          explanation:
-          req_list:
-            - name: Upper-level Mathematics
-              max_counted:
-              min_needed:
-              explanation: Students may choose for a variety of upper-level
-                mathematics courses.
-              course_list:
-                - MAT 320
-                - MAT 322
-                - MAT 375
-                - MAT 377
-                - MAT 378
-                - MAT 385
-                - MAT 392
-                - MAT 486
-                - MAT 522
-
-            - name: Differential Equations
-              max_counted:
-              min_needed:
-              explanation: MAT 391/MAE 305 and MAT 427 cannot both be taken
-                because the content is too similar.
-              course_list:
-                - MAT 391
-                - MAT 427
-
-        - name: Molecular Biology
-          max_counted:
-          min_needed:
-          explanation: Prospective ORFE majors may elect to take biochemistry
-            as a departmental.
-          course_list:
-            - MOL 345
-
-        - name: Neuroscience
-          max_counted:
-          min_needed:
-          explanation: Prospective ORFE majors may elect to take the following
-            computational neuroscience classes as departmentals
-          course_list:
-            - NEU 437
-            - NEU 330
-
-        - name: Psychology
-          max_counted:
-          min_needed:
-          explanation: Prospective ORFE majors may elect to take
-            Computational Models of Cognition as a departmental.
-          course_list:
-            - PSY 360
-
-- name: Tracks
-  max_counted:
-  min_needed:
-  explanation:
-    Students often wish to follow a theme in their selection of courses.
-    These are a few possible themes.
-  double_counting_allowed: true
-  req_list:
-    - name: Applied Mathematics
-      max_counted:
-      min_needed: ALL
-      explanation:
-      course_list:
-        - MAT 375
-        - MAT 378
-        - MAT 321
-        - MAE 406
-        - ORF 405
-    - name: Engineering Systems
-      max_counted:
-      min_needed: ALL
-      explanation:
-      course_list:
-        - ORF 363
-        - ORF 409
-        - ORF 467
-        - COS 226
-        - ECE 301
-        - MAE 433
-    - name: Financial Engineering
-      max_counted:
-      min_needed: ALL
-      explanation:
-      course_list:
-        - ORF 311
-        - ORF 350
-        - ORF 405
-        - ORF 435
-        - ECO 362
-        - ECO 465
-    - name: Information Sciences
-      max_counted:
-      min_needed: ALL
-      explanation:
-      course_list:
-        - ORF 401
-        - ORF 418
-        - COS 217
-        - COS 226
-    #   - COS 425 # doesn't seem to exist
-
-    - name: Machine Learning
-      max_counted:
-      min_needed: ALL
-      explanation:
-      course_list:
-        - COS 217
-        - COS 226
-        - ORF 350
-        - ORF 407
-        - ORF 411
-        - ORF 418
-
-    - name: Pre-Med / Health Care
-      max_counted:
-      min_needed: ALL
-      explanation:
-      course_list:
+      - name: Civil and Environmental Engineering
+        max_counted: 3
+        min_needed: 1
+        course_list:
+        - CEE 304
+        - CEE 460
+      - name: Chemistry
+        max_counted: 3
+        min_needed: 1
+        course_list:
         - CHM 301
         - CHM 302
+      - name: Computer Science
+        max_counted: 3
+        min_needed: 1
+        course_list:
+        - COS 217
+        - COS 226
+        - COS 323
+        - COS 423
+        - COS 485
+      - name: Economics
+        max_counted: 3
+        min_needed: 1
+        course_list:
+        - ECO 310
+        - ECO 311
+        - ECO 312
+        - ECO 317
+        - ECO 332
+        - ECO 341
+        - ECO 342
+        - ECO 361
+        - ECO 362
+        - ECO 363
+        - ECO 418
+        - ECO 462
+        - ECO 464
+        - ECO 466
+        - ECO 467
+      - name: Ecology and Evolutionary Biology
+        max_counted: 3
+        min_needed: 1
+        course_list:
+        - EEB 324
+      - name: Electrical and Computer Engineering
+        max_counted: 3
+        min_needed: 1
+        course_list:
+        - ECE 301
+        - ECE 381
+        - ECE 473
+        - ECE 486
+      - name: Environmental Studies
+        max_counted: 3
+        min_needed: 1
+        course_list:
+        - ENV 302
+      - name: Mechanical and Aerospace Engineering
+        max_counted: 3
+        min_needed: 1
+        course_list:
+        - MAE 206
+        - MAE 345
+        - MAE 433
+        - MAE 434
+      - name: Mathematics
+        max_counted: 3
+        min_needed: 1
+        course_list:
+        - MAT 320
+        - MAT 322
+        - MAT 375
+        - MAT 377
+        - MAT 378
+        - MAT 385
+        - MAT 392
+        - MAT 486
+        - MAT 522
+        - MAT 391
+        - MAT 427
+      - name: Molecular Biology
+        max_counted: 3
+        min_needed: 1
+        course_list:
         - MOL 345
-        - ORF 350
-        - ORF 401
-        - ORF 411
-        - ORF 418
-
-    - name: Statistics
-      max_counted:
-      min_needed: ALL
-      explanation:
-      course_list:
-        - ORF 311
-        - ORF 350
-        - ORF 409
-        - ORF 418
-        - ORF 405
-        - ORF 467
-
+      - name: Neuroscience
+        max_counted: 3
+        min_needed: 1
+        course_list:
+        - NEU 437
+        - NEU 330
+      - name: Psychology
+        max_counted: 3
+        min_needed: 1
+        course_list:
+        - PSY 360
+      - name: Restrictions
+        max_counted: 0
+        min_needed: 1
+        explanation: |-
+          MAT 391/MAE 305 and MAT 427 cannot both be taken because the content is too similar.
 - name: Senior Independent Research
   max_counted: 1
   min_needed: 1
   explanation: |-
-    A full-year thesis (or a one semester project plus an additional 400-level ORFE departmental) involving an application of the techniques in the program applied to a topic that the student chooses in consultation with a faculty adviser.
+    A full-year thesis (or a one semester project plus an additional 400-level ORFE departmental) involving an application of the techniques in the program applied to a topic that the student chooses in consultation with a faculty adviser.<br><br>
 
-    Senior Thesis - ORF 478 - A full year effort that involves a major application of the techniques in the program applied to a topic that a student chooses in consultation with a faculty advisor. Students interested in a full-year senior thesis must be willing to spend the appropriate time during both the fall and the spring semesters.
+    Senior Thesis - ORF 478 - A full year effort that involves a major application of the techniques in the program applied to a topic that a student chooses in consultation with a faculty advisor. Students interested in a full-year senior thesis must be willing to spend the appropriate time during both the fall and the spring semesters.<br><br>
 
-    Students who are unable to make adequate progress can switch to ORF 479 and be required to take eleven departmental electives. Students will enroll in the spring and will receive credit for two course grades given in the spring.
+    Students who are unable to make adequate progress can switch to ORF 479 and be required to take eleven departmental electives. Students will enroll in the spring and will receive credit for two course grades given in the spring.<br><br>
 
-    OR
+    OR<br><br>
 
     Senior Independent Project - ORF 479 (Spring semester only) - A short progress report will be due in January, (Dean’s Date) to make sure that the students have chosen a suitable topic and matched up with their advisor. The final outcome will be a report due at the end of the spring semester. The report will fully describe the research project and its results. Typically projects will take approximately 30 to 50 pages. (Also, students who take the independent project will need to take an additional 4XX ORFE departmental elective.)
   req_list:
@@ -354,7 +224,7 @@ req_list:
       max_counted: 1
       min_needed: 1
       explanation: |-
-        Senior Thesis - ORF 478 - A full year effort that involves a major application of the techniques in the program applied to a topic that a student chooses in consultation with a faculty advisor. Students interested in a full-year senior thesis must be willing to spend the appropriate time during both the fall and the spring semesters.
+        Senior Thesis - ORF 478 - A full year effort that involves a major application of the techniques in the program applied to a topic that a student chooses in consultation with a faculty advisor. Students interested in a full-year senior thesis must be willing to spend the appropriate time during both the fall and the spring semesters.<br>
         Students who are unable to make adequate progress can switch to ORF 479 and be required to take eleven departmental electives. Students will enroll in the spring and will receive credit for two course grades given in the spring.
       course_list:
         - ORF 478
