--- a/backend/majors/PHI.yaml
+++ b/backend/majors/PHI.yaml
@@ -108,7 +108,7 @@ req_list:
   min_needed: 1
   max_counted: 1
   explanation: |-
-    <i>Editor's Note: Majors do not enroll in any numbered course for this requirement, so Compass does not check it.</i>
+    <i>Editor's Note: Majors do not enroll in any numbered course for this requirement, so Compass does not check it.</i><br><br>
     
     During fall semester of junior year, independent work normally involves participation in a seminar of up to five students under the supervision of an instructor from the faculty of the department. The seminar provides a transition from coursework to fully independent work. A junior seminar meets weekly for an hour or biweekly for two hours to discuss readings selected by the instructor, and each student writes a final paper, normally of at least 5,000 words, on a topic in the area defined by those readings, usually chosen by the student from a list provided by the instructor. (The student's grade for fall semester independent work will be based mainly on this paper, but it is usually based partly on shorter papers and/or oral presentations in the seminar earlier in the term.) During spring semester of junior year, independent work consists of writing a junior paper — an essay on a philosophical topic, normally of at least 5,000 words — under the supervision of an individual faculty adviser (different from the student's fall seminar instructor).
   no_req:
@@ -116,7 +116,7 @@ req_list:
   min_needed: 1
   max_counted: 1
   explanation: |-
-    <i>Editor's Note: Majors do not enroll in any numbered course for this requirement, so Compass does not check it.</i>
+    <i>Editor's Note: Majors do not enroll in any numbered course for this requirement, so Compass does not check it.</i><br><br>
     
     Senior year independent work consists of the following: writing the senior thesis, an essay or group of related essays on a topic or group of related topics in philosophy, normally of at least 10,000 words (and normally of at most 15,000 words); and preparation for the departmental examination (see below). The thesis is read, the examination is conducted, and both are graded by a committee of two members of the faculty, one primarily for advising the thesis, the other for coordinating the examination. A short thesis proposal is due just before fall recess and an interim thesis draft, normally of at least 5,000 words (not necessarily in final form), is due just after winter recess.
   no_req:
@@ -124,7 +124,7 @@ req_list:
   min_needed: 1
   max_counted: 1
   explanation: |-
-    <i>Editor's Note: Majors do not enroll in any numbered course for this requirement, so Compass does not check it.</i>
+    <i>Editor's Note: Majors do not enroll in any numbered course for this requirement, so Compass does not check it.</i><br><br>
     
     The senior departmental examination is a 90-minute oral examination on the general area of philosophy to which the thesis topic belongs. The final syllabus of readings for the departmental examination (agreed upon between the student and their examination coordinator and thesis adviser) is due by the last week of classes.
   no_req:
